--- a/rail_following--Loi/data_collection-DGMD.ipynb
+++ b/rail_following--Loi/data_collection-DGMD.ipynb
@@ -26,7 +26,64 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "599d1960b0844427b68a874b5c93b7ff",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "HBox(children=(Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d6affb802a284eab96884fddf0e962c4",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='x', max=1.0, min=-1.0, step=0.001)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "020ef727b2934224b9f3d95f734500a5",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='y', max=1.0, min=-1.0, step=0.001)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ed15d9bc974142568082a316ba576401",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Controller()"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
     "# IPython Libraries for display and widgets\n",
     "import traitlets\n",
@@ -93,13 +150,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Directories not created becasue they already exist\n"
+     ]
+    },
+    {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "07dfe97de5b94580938acc3abf1415ad",
+       "model_id": "2c7162e0e04441eca820cebeec9a35b4",
        "version_major": 2,
        "version_minor": 0
       },
@@ -156,15 +220,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
+    "import datetime\n",
+    "\n",
+    "DATASET_DIR = 'dataset_xy'\n",
+    "\n",
     "def timestr():\n",
     "    return str(datetime.datetime.now().strftime('%Y-%m-%d_%H-%M-%S'))\n",
     "\n",
     "!zip -r -q road_following_{DATASET_DIR}_{timestr()}.zip {DATASET_DIR}"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
