--- a/rail_following--Loi/live_demo-DGMD.ipynb
+++ b/rail_following--Loi/live_demo-DGMD.ipynb
@@ -45,6 +45,23 @@
     "model = model.to(device)\n",
     "model = model.eval().half()\n",
     "\n",
+    "print('ok')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "ok\n"
+     ]
+    }
+   ],
+   "source": [
     "import torchvision.transforms as transforms\n",
     "import torch.nn.functional as F\n",
     "import cv2\n",
@@ -61,12 +78,12 @@
     "    image.sub_(mean[:, None, None]).div_(std[:, None, None])\n",
     "    return image[None, ...]\n",
     "\n",
+    "from jetbot import Heartbeat\n",
     "def handle_heartbeat_status(change):\n",
     "    if change['new'] == Heartbeat.Status.dead:\n",
     "        print('heartbeat connection lost')\n",
-    "        while camera_links: camera_links.pop().unlink()\n",
-    "        while cont_links: cont_links.pop().unlink()\n",
-    "        robot.stop()\n",
+    "        try: stop()\n",
+    "        except: pass\n",
     "\n",
     "heartbeat = Heartbeat(period=5)\n",
     "heartbeat.observe(handle_heartbeat_status, names='status') # attach the callback function to heartbeat status\n",
@@ -88,28 +105,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 49,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "tt\n",
       "ok\n"
      ]
     }
    ],
    "source": [
-    "angle = 0.0\n",
-    "angle_last = 0.0\n",
+    "import threading\n",
+    "tt = threading.Timer(1.0, print('tt'))\n",
+    "def run():\n",
+    "    global tt\n",
+    "    tt = threading.Timer(1.0, run)\n",
+    "    tt.start()\n",
+    "    execute({'new': camera.value})\n",
+    "    \n",
+    "#def run():\n",
+    "#    execute({'new': camera.value})\n",
+    "#    #camera.observe(execute, names='value')  \n",
     "\n",
     "def stop():\n",
-    "    camera.unobserve(execute, names='value')\n",
+    "    camera.unobserve_all()\n",
     "    time.sleep(0.1)  # add a small sleep to make sure frames have finished processing\n",
+    "    tt.cancel()\n",
     "    robot.stop()\n",
+    "    \n",
+    "angle = 0.0\n",
+    "angle_last = 0.0\n",
     "    \n",
     "def execute(change):\n",
     "    global angle, angle_last\n",
+    "    \n",
+    "    robot.stop()\n",
+    "    time.sleep(1) #stop to get clear image\n",
     "    image = change['new']\n",
     "    xy = model(preprocess(image)).detach().float().cpu().numpy().flatten()\n",
     "    x = xy[0]\n",
@@ -125,29 +159,53 @@
     "    angle_last = angle\n",
     "\n",
     "    steering_slider.value = pid + steering_bias_slider.value\n",
-    "\n",
-    "    reduction = 0.5\n",
-    "    \n",
-    "    left_motor = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0) * 0.5\n",
-    "    right_motor = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0) * 0.5\n",
+    "   \n",
+    "    #robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
+    "    #robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0)\n",
+    "    left_motor = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
+    "    right_motor = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0)\n",
     "    left_slider.value = left_motor\n",
     "    right_slider.value = right_motor\n",
     "    \n",
-    "    if left_motor > right_motor\n",
-    "    \n",
-    "    \n",
-    "    #robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, 1.0), 0.0)\n",
-    "    #robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, 1.0), 0.0)\n",
+    "    #modify outputs to motors from original\n",
+    "    #run at fixed speeds\n",
+    "    turn_thres = 0.3\n",
+    "    if steering_slider.value > turn_thres:\n",
+    "        #turn right\n",
+    "        status.value = \"turn right\"\n",
+    "        robot.left_motor.value = 0.4\n",
+    "        robot.right_motor.value = -0.4\n",
+    "        time.sleep(0.001)\n",
+    "        robot.left_motor.value = 0.3\n",
+    "        robot.right_motor.value = -0.3\n",
+    "        time.sleep(0.001)\n",
+    "        robot.stop()\n",
+    "        \n",
+    "    elif steering_slider.value < -turn_thres:\n",
+    "        status.value = \"turn left\"\n",
+    "        #turn left\n",
+    "        robot.left_motor.value = -0.4\n",
+    "        robot.right_motor.value = 0.4\n",
+    "        time.sleep(0.001)\n",
+    "        robot.left_motor.value = -0.3\n",
+    "        robot.right_motor.value = 0.3\n",
+    "        time.sleep(0.001)\n",
+    "        robot.stop()\n",
+    "        \n",
+    "    else:\n",
+    "        #go straight\n",
+    "        status.value = \"go straight\"\n",
+    "        robot.left_motor.value = 0.4\n",
+    "        robot.right_motor.value = 0.4\n",
+    "        time.sleep(0.001)  \n",
+    "        robot.left_motor.value = 0.26\n",
+    "        robot.right_motor.value = 0.25\n",
+    "        time.sleep(0.4)  \n",
+    "        robot.stop()\n",
+    "        \n",
+    "    left_adjusted.value = robot.left_motor.value\n",
+    "    right_adjusted.value = robot.right_motor.value\n",
     "\n",
-    "    #robot.left_motor.value = max(min(speed_slider.value + steering_slider.value, -0.33), 0.33)\n",
-    "    #robot.right_motor.value = max(min(speed_slider.value - steering_slider.value, -0.33), 0.33)\n",
-    "    \n",
-    "\n",
-    "    \n",
-    "def run():\n",
-    "    execute({'new': camera.value})\n",
-    "    camera.observe(execute, names='value')\n",
-    "    \n",
     "print('ok')"
    ]
   },
@@ -176,18 +234,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Display some sliders that will let us see what JetBot is thinking."
+    "### Display some sliders that will let us see what JetBot is thinking"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "086a866fa6584cdabcc33b58a1779155",
+       "model_id": "e807b566f2c441179167e9793d4680f0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -201,7 +259,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "80ee383e6e054bc7a7c092751aaf7cdd",
+       "model_id": "250fa3dda1ff4353be46e83e12c30078",
        "version_major": 2,
        "version_minor": 0
       },
@@ -215,7 +273,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d6db59e3f9324506a3b1838a2b2fdd22",
+       "model_id": "3bc821776208451b8c0b79fb8e4c5fc0",
        "version_major": 2,
        "version_minor": 0
       },
@@ -229,12 +287,26 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ab2cf932f748483a93d85608f193b9d7",
+       "model_id": "b1440bd3d61c4280a6663e7c40678842",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "FloatSlider(value=0.0, description='steering', max=1.0, min=-1.0)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ac18df65d3014c42ac3b35e8727812a3",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Textarea(value='status')"
       ]
      },
      "metadata": {},
@@ -250,6 +322,7 @@
     "\n",
     "#camera = Camera()\n",
     "camera = Camera.instance(width=224, height=224, fps=10)\n",
+    "camera.start()\n",
     "image_widget = ipywidgets.Image()\n",
     "traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)\n",
     "#display(image_widget)\n",
@@ -260,7 +333,7 @@
     "speed_gain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.001, value=0.33, description='speed gain')\n",
     "steering_gain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.001, value=0.33, description='steering gain')\n",
     "steering_dgain_slider = ipywidgets.FloatSlider(min=0.0, max=0.4, step=0.001, value=0.33, description='steering kd')\n",
-    "steering_bias_slider = ipywidgets.FloatSlider(min=-0.1, max=0.4, step=0.001, value=0.01, description='steering bias')\n",
+    "steering_bias_slider = ipywidgets.FloatSlider(min=-0.1, max=0.1, step=0.001, value=0.01, description='steering bias')\n",
     "#1. Speed Control (speed_gain_slider): To start your JetBot increase ``speed_gain_slider`` \n",
     "#2. Steering Gain Control (steering_gain_sloder): If you see JetBot is woblling, you need to reduce ``steering_gain_slider`` till it is smooth\n",
     "#3. Steering Bias control (steering_bias_slider): If you see JetBot is biased towards extreme right or extreme left side of the track, you should control this slider till JetBot start following line or track in the center.  This accounts for motor biases as well as camera offsets\n",
@@ -282,17 +355,19 @@
     "speed_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='speed')\n",
     "\n",
     "left_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='left')\n",
+    "left_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L adjusted')\n",
     "right_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='right')\n",
+    "right_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R adjusted')\n",
     "\n",
     "#The x and y sliders will display the predicted x, y values.\n",
     "#The steering slider will display our estimated steering value.  Please remember, this value isn't the actual angle of the target, but simply a value that is\n",
     "#nearly proportional.  When the actual angle is ``0``, this will be zero, and it will increase / decrease with the actual angle.  \n",
     "\n",
-    "display(ipywidgets.HBox([y_slider, speed_slider,left_slider,right_slider]))\n",
+    "display(ipywidgets.HBox([y_slider,left_slider,right_slider,left_adjusted,right_adjusted]))\n",
     "display(x_slider, steering_slider)\n",
     "\n",
-    "#try: run()\n",
-    "#except: pass"
+    "status = ipywidgets.Textarea(value = \"status\")\n",
+    "display(status)"
    ]
   },
   {
@@ -304,7 +379,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -313,11 +388,21 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Debug"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#execute({'new': camera.value})\n",
+    "#camera.observe(execute, names='value')"
+   ]
   }
  ],
  "metadata": {
