git push notebook

--- a/rail_following--Loi/live_demo-DGMD--PoolTable.ipynb
+++ b/rail_following--Loi/live_demo-DGMD--PoolTable.ipynb
@@ -117,7 +117,8 @@
     }
    ],
    "source": [
-    "#run every x sec\n",
+    "#alternate method: run every x sec\n",
+    "#decouples from camera fps setting interval between runs\n",
     "#import threading\n",
     "#tt = threading.Timer(1.0, print,['tt'])\n",
     "#def run():\n",
@@ -131,9 +132,10 @@
     "    camera.observe(execute, names='value')  \n",
     "\n",
     "def stop():\n",
+    "    #tt.cancel()\n",
     "    camera.unobserve_all()\n",
     "    time.sleep(0.1)  # add a small sleep to make sure frames have finished processing\n",
-    "    #tt.cancel()\n",
+    "    camera.release()\n",
     "    robot.stop()\n",
     "    \n",
     "angle = 0.0\n",
@@ -343,31 +345,35 @@
     "#2. Steering Gain Control (steering_gain_sloder): If you see JetBot is woblling, you need to reduce ``steering_gain_slider`` till it is smooth\n",
     "#3. Steering Bias control (steering_bias_slider): If you see JetBot is biased towards extreme right or extreme left side of the track, you should control this slider till JetBot start following line or track in the center.  This accounts for motor biases as well as camera offsets\n",
     "\n",
+    "#debug\n",
     "#display(speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider)\n",
     "\n",
+    "#manual stop start button\n",
     "button_layout = ipywidgets.Layout(width='128px', height='64px')\n",
     "stop_button = ipywidgets.Button(description='STOP', button_style='danger', layout=button_layout)\n",
     "stop_button.on_click(lambda x: stop())\n",
     "run_button = ipywidgets.Button(description='RUN', button_style='success', layout=button_layout)\n",
     "run_button.on_click(lambda x: run())\n",
     "\n",
+    "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,run_button,stop_button])\n",
+    "display(widgets.HBox([image_widget,sliders]))\n",
+    "\n",
     "x_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='x')\n",
     "y_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='y')\n",
     "steering_slider = ipywidgets.FloatSlider(min=-1.0, max=1.0, description='steering')\n",
     "speed_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='speed')\n",
-    "\n",
-    "left_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L raw')\n",
-    "left_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L adjusted')\n",
-    "right_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R raw')\n",
-    "right_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R adjusted')\n",
-    "turn_thres = ipywidgets.FloatSlider(min=0, max=1.0, value=0.2, description='threshold')\n",
-    "\n",
     "#The x and y sliders will display the predicted x, y values.\n",
     "#The steering slider will display our estimated steering value.  Please remember, this value isn't the actual angle of the target, but simply a value that is\n",
     "#nearly proportional.  When the actual angle is ``0``, this will be zero, and it will increase / decrease with the actual angle.  \n",
     "\n",
-    "sliders = widgets.VBox([speed_gain_slider, steering_gain_slider, steering_dgain_slider, steering_bias_slider,run_button,stop_button])\n",
-    "display(widgets.HBox([image_widget,sliders]))\n",
+    "#speed set by NVIDIA code\n",
+    "left_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L raw')\n",
+    "right_slider = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R raw')\n",
+    "\n",
+    "#modify the speed set by NVIDIA code\n",
+    "left_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='L adjusted')\n",
+    "right_adjusted = ipywidgets.FloatSlider(min=0, max=1.0, orientation='vertical', description='R adjusted')\n",
+    "turn_thres = ipywidgets.FloatSlider(min=0, max=1.0, value=0.2, description='threshold')\n",
     "\n",
     "display(ipywidgets.HBox([y_slider,left_slider,right_slider,left_adjusted,right_adjusted]))\n",
     "display(x_slider, steering_slider, turn_thres)\n",
@@ -380,25 +386,30 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Stop"
+    "### Manual Stop"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'camera' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-2-bbe0f5ed5fa9>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0munobserve_all\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0mtime\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msleep\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;36m0.1\u001b[0m\u001b[0;34m)\u001b[0m  \u001b[0;31m# add a small sleep to make sure frames have finished processing\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mtt\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcancel\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mexcept\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;32mpass\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0mcamera\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mrelease\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'camera' is not defined"
+     ]
+    }
+   ],
    "source": [
-    "try: stop()\n",
-    "except: pass"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "camera.unobserve_all()\n",
+    "time.sleep(0.1)  # add a small sleep to make sure frames have finished processing\n",
+    "camera.release()\n",
     "robot.stop()"
    ]
   },
@@ -424,7 +435,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#try: tt.cancel() \n",
+    "#except: pass"
+   ]
   }
  ],
  "metadata": {
