rail following UI improve

--- a/rail_following--Loi/data_collection-DGMD.ipynb
+++ b/rail_following--Loi/data_collection-DGMD.ipynb
@@ -30,49 +30,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6affe879cccc4f21af3e97c856fcc92a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "HBox(children=(Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "04b05c7ee5a446a184acffe0ae57d79c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.0, description='x', max=1.0, min=-1.0, step=0.001)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "66524bf0324b45ce83cdce757ac25470",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "FloatSlider(value=0.0, description='y', max=1.0, min=-1.0, step=0.001)"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1c03d490eda846bd897a3bc800a039dc",
+       "model_id": "b8c9b1aee69647f2a9cf3f3dd78e5f30",
        "version_major": 2,
        "version_minor": 0
       },
@@ -124,12 +82,10 @@
     "    jpeg_image = bgr8_to_jpeg(image)\n",
     "    return jpeg_image\n",
     "\n",
-    "time.sleep(1)\n",
     "traitlets.dlink((camera, 'value'), (image_widget, 'value'), transform=bgr8_to_jpeg)\n",
     "traitlets.dlink((camera, 'value'), (target_widget, 'value'), transform=display_xy)\n",
     "\n",
-    "display(widgets.HBox([image_widget, target_widget]), x_slider, y_slider)\n",
-    "\n",
+    "#display(widgets.HBox([image_widget, target_widget]), x_slider, y_slider)\n",
     "controller = widgets.Controller(index=0)\n",
     "display(controller)"
    ]
@@ -150,18 +106,46 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d404d220894402783808587effa68d3",
+       "model_id": "1d9980e3d6d34c5b8620c66ddf641c57",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
        "VBox(children=(Image(value=b'\\xff\\xd8\\xff\\xe0\\x00\\x10JFIF\\x00\\x01\\x01\\x00\\x00\\x01\\x00\\x01\\x00\\x00\\xff\\xdb\\x00C…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "52824cf12876427aa008e04d9b6909ce",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='x', max=1.0, min=-1.0, step=0.001)"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "bd8f148754504f59bf16407982562bf1",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "FloatSlider(value=0.0, description='y', max=1.0, min=-1.0, step=0.001)"
       ]
      },
      "metadata": {},
@@ -196,12 +180,30 @@
     "            f.write(image_widget.value)\n",
     "        count_widget.value = len(glob.glob(os.path.join(DATASET_DIR, '*.jpg')))\n",
     "\n",
+    "controller.buttons[13].unobserve_all()\n",
     "controller.buttons[13].observe(save_snapshot, names='value')\n",
     "\n",
     "display(widgets.VBox([\n",
     "    target_widget,\n",
     "    count_widget\n",
-    "]))"
+    "]))\n",
+    "display(x_slider, y_slider)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Stop Camera"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "camera.stop()"
    ]
   },
   {
@@ -213,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -228,11 +230,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Debug"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#camera.stop()\n",
+    "#camera.release()\n",
+    "#camera.cap.release()\n",
+    "#from jetbot import Camera\n",
+    "#Camera().stop()\n",
+    "#Camera().cap.release()\n",
+    "#Camera().release()\n",
+    "#camera.thread.interrupt()\n",
+    "#camera.proc.send_signal(multiprocessing.SIG_KILL)\n",
+    "#self.thread.start()"
+   ]
   }
  ],
  "metadata": {
